--- a/portfolio.html
+++ b/portfolio.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GOIT MARKUP HW 01</title>
+    <title>GOIT MARKUP HW 02</title>
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- FONTS -->
+    <!-- Raleway 800 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
 
+    <!--Roboto 400, 500, 700 and 900-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -104,7 +106,7 @@
     </main>
 
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./portfolio.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and
             </br> sales for your business with digital
             </br> marketing & growth solutions.</p>
