--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
         <nav>
             <a href="./portfolio.html"> WEBSTUDIO </a>
             <ul>
-                <li><a href="./portfolio.html">Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
