--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <ul>
                 <li><a href="./index.html">Studio</a></li>
                 <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="#" class="color-change-on-hover">Contacts</a></li>
             </ul>
         </nav>
         <ul>
@@ -106,8 +106,8 @@
     </main>
 
     <footer>
-        <a href="./portfolio.html">WEBSTUDIO</a>
-        <p>Increase the flow of customers and
+        <a href="./portfolio.html" >WEBSTUDIO</a>
+        <p class="color-change-on-hover">Increase the flow of customers and
             </br> sales for your business with digital
             </br> marketing & growth solutions.</p>
     </footer>
