--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <header>
                 <nav>
-                    <a href="./index.html"> WEBSTUDIO </a>
+                    <a href="../index.html"> WEBSTUDIO </a>
                     <ul>
                         <li><a href="./index.html">Studio</a></li>
                         <li><a href="./portfolio.html">Portfolio</a></li>
