--- a/portfolio.html
+++ b/portfolio.html
@@ -1,116 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GOIT MARKUP HW 02</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Raleway 800 -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
     <!--Roboto 400, 500, 700 and 900-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto&display=swap"
-        rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700;900&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="./portfolio.html"> WEBSTUDIO </a>
-            <ul>
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="./portfolio.html">Portfolio</a></li>
-                <li><a href="#" class="color-change-on-hover">Contacts</a></li>
-            </ul>
-        </nav>
+      <nav class="navigation-links">
+        <a href="./portfolio.html">
+          <img
+            class="logo-image"
+            src="/images/webstudio-header.svg"
+            alt="Web Studio"
+          />
+        </a>
         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="#" class="color-change-on-hover">Contacts</a></li>
+          <br />
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
         </ul>
+      </nav>
     </header>
+
     <main>
-        <section>
-            <h1>Effective Solutions <br> for Your Business</h1>
-            <button type="button">Order Service</button>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect creative solution.</p>
-                </li>
+      <section class="hero-content">
+        <div class="container">
+          <h1>Effective Solutions<br />for Your Business</h1>
+          <button type="button">Order Service</button>
+        </div>
+      </section>
 
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.</p>
-                </li>
+      <!-- About Us Section -->
+      <section class="about-us">
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect creative solution.
+            </p>
+          </li>
 
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.</p>
-                </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
 
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.</p>
-                </li>
-            </ul>
-        </section>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
 
-        <section>
-            <h2>What are we doing</h2>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
 
-            <ul>
-                <li><img src="images/what-we-are-doing-1.jpg" alt="monitor image" width="360"></li>
+      <!-- Services Section -->
+      <section class="services">
+        <h2>What are we doing</h2>
 
-                <li><img src="images/what-we-are-doing-2.jpg" alt="mobile phone stack" width="360"></li>
+        <ul>
+          <li>
+            <img
+              src="images/what-we-are-doing-1.jpg"
+              alt="monitor image"
+              width="360"
+            />
+          </li>
 
-                <li><img src="images/what-we-are-doing-3.jpg" alt="holding phone" width="360"></li>
-            </ul>
-        </section>
+          <li>
+            <img
+              src="images/what-we-are-doing-2.jpg"
+              alt="mobile phone stack"
+              width="360"
+            />
+          </li>
 
-        <section>
-            <h2>Our Team</h2>
+          <li>
+            <img
+              src="images/what-we-are-doing-3.jpg"
+              alt="holding phone"
+              width="360"
+            />
+          </li>
+        </ul>
+      </section>
 
-            <ul>
-                <li><img src="images/our-team-1.jpg" alt="Mark Guerrero" width="264">
-                    <h4>Mark Guerrero</h4>
-                    <p>Product Designer</p>
-                </li>
-                <li><img src="images/our-team-2.jpg" alt="Tom Ford" width="264">
+      <!-- Team Section -->
+      <section class="team">
+        <h2>Our Team</h2>
 
-                    <h4>Tom Ford</h4>
-                    <p>Developer</p>
-                </li>
-                <li><img src="images/our-team-3.jpg" alt="Camila Garcia" width="264">
+        <ul>
+          <li>
+            <img src="images/our-team-1.jpg" alt="Mark Guerrero" width="264" />
+            <h4>Mark Guerrero</h4>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="images/our-team-2.jpg" alt="Tom Ford" width="264" />
 
-                    <h4>Camila Garcia</h4>
-                    <p>Marketing</p>
-                </li>
-                <li><img src="images/our-team-4.jpg" alt="Daniel Wilson" width="264">
+            <h4>Tom Ford</h4>
+            <p>Developer</p>
+          </li>
+          <li>
+            <img src="images/our-team-3.jpg" alt="Camila Garcia" width="264" />
 
-                    <h4>Daniel Wilson</h4>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
+            <h4>Camila Garcia</h4>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="images/our-team-4.jpg" alt="Daniel Wilson" width="264" />
+
+            <h4>Daniel Wilson</h4>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-        <a href="./portfolio.html" >WEBSTUDIO</a>
-        <p class="color-change-on-hover">Increase the flow of customers and
-            </br> sales for your business with digital
-            </br> marketing & growth solutions.</p>
-    </footer>
-</body>
+      <a href="./portfolio.html">
+        <img
+          class="logo-image"
+          src="/images/webstudio-footer.svg"
+          alt="Web Studio"
+        />
+      </a>
 
+      <p class="color-change-on-hover">
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
