--- a/portfolio.html
+++ b/portfolio.html
@@ -26,20 +26,23 @@
   <body>
     <header>
       <nav class="navigation-links">
-        <a href="./portfolio.html">
-          <img
-            class="logo-image"
-            src="/images/webstudio-header.svg"
-            alt="Web Studio"
-          />
+        <a class="logo" href="./portfolio.html">
+          <h1 title="WEB">WEB</h1>
+          <h1 title="STUDIO">STUDIO</h1>
         </a>
         <ul>
           <li><a href="./index.html">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="#" class="color-change-on-hover">Contacts</a></li>
           <br />
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+          <li>
+            <a class="contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contacts" href="tel:+380441111111">+38 044 111 11 11</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -153,19 +156,18 @@
     </main>
 
     <footer>
-      <a href="./portfolio.html">
-        <img
-          class="logo-image"
-          src="/images/webstudio-footer.svg"
-          alt="Web Studio"
-        />
-      </a>
+      <section class="footer-section">
+        <a class="logo" href="./portfolio.html">
+          <h1 title="WEB">WEB</h1>
+          <h1 title="STUDIO">STUDIO</h1>
+        </a>
 
-      <p class="color-change-on-hover">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
-        marketing & growth solutions.
-      </p>
+        <p class="color-change-on-hover">
+          Increase the flow of customers and <br />
+          sales for your business with digital <br />
+          marketing & growth solutions.
+        </p>
+      </section>
     </footer>
   </body>
 </html>
